--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
          </div>
        </div>
         <br>
-        <iframe class="col-lg-3 col-md-3 col-sm-3 col-xs-4 responsive-iframe" src="https://www.youtube.com/embed/esc_wnPZ39A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </center>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/esc_wnPZ39A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>  
+      </center>
     </section>  
  
    <section id="Alumani">
@@ -138,9 +140,11 @@
   <section id="ContactUs">
     <h2>Contact Us</h2>
     <center>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.159058177163!2d73.73564641420488!3d18.56686647260412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bbf86abb4081%3A0xbda4b9cbe6f42207!2sGlobal%20Indian%20International%20School%20(GIIS)%2C%20Balewadi%20Campus!5e0!3m2!1sen!2sin!4v1625802283479!5m2!1sen!2sin" class="responsive-iframe" height="450px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.159058177163!2d73.73564641420488!3d18.56686647260412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bbf86abb4081%3A0xbda4b9cbe6f42207!2sGlobal%20Indian%20International%20School%20(GIIS)%2C%20Balewadi%20Campus!5e0!3m2!1sen!2sin!4v1625802283479!5m2!1sen!2sin" class="embed-responsive-item"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </div>
     <span><img class="img-responsive col-lg-3 col-md-3 col-sm-3 col-xs-4  " id ="img201" src="principal.png"></span>
-    
+
       <img id="img200" src="mailicon.png">
       <p id="pop">School@gmail.com</p>
     
