--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          
          <div id="mycollapse" class="collapse navbar-collapse">    
             <ul class="nav navbar-nav">
-                <li><a class="navigation" href="#Home">Home</a></li>
+                <li><a class="navigation" href="#home">Home</a></li>
                 <li><a class="navigation" href="#Alumani">Managment & Board</a></li>
                 <li><a class="navigation" href="#campuslife">Campus Life</a></li>
                 <li><a class="navigation" href="#ContactUs">Contact Us</a></li>
@@ -143,7 +143,7 @@
       <div class="embed-responsive embed-responsive-16by9">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.159058177163!2d73.73564641420488!3d18.56686647260412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bbf86abb4081%3A0xbda4b9cbe6f42207!2sGlobal%20Indian%20International%20School%20(GIIS)%2C%20Balewadi%20Campus!5e0!3m2!1sen!2sin!4v1625802283479!5m2!1sen!2sin" class="embed-responsive-item"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
-    <span><img class="img-responsive col-lg-3 col-md-3 col-sm-3 col-xs-4  " id ="img201" src="principal.png"></span>
+    <span><img class="img-responsive col-lg-3 col-md-3 col-sm-3 col-xs-4" style=padding:12px; id ="img201" src="principal.png"></span>
 
       <img id="img200" src="mailicon.png">
       <p id="pop">School@gmail.com</p>
